--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -1,6 +1,6 @@
 .home__container {
     position: relative;
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -69,7 +69,7 @@
     font-weight: 400;
     color: #e51414;
     text-align: center;
-    margin-top: .3em;
+    margin-top: .8em;
 }
 
 .home__wrapper .dynamic-txts{
@@ -77,7 +77,7 @@
     height: 20px;
     line-height: 20px;
     position: relative;
-    left: 20px;
+    left: -40px;
     margin-top: 0px;
     overflow: hidden;
     grid-column: 1 / 4;
