--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -39,6 +39,8 @@
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 1rem;
+    position: relative;
+    top: -2em;
 }
 
 .live1{
@@ -104,15 +106,15 @@
 .imgsPoke {
     grid-column: 6/8;
     grid-row: 1/3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     position: relative;
-    background-color: green;
 }
 
 .live-pokeball {
+    grid-column: 1/13;
+    grid-row: 1/5;
     position: absolute;
     align-self: center;
     cursor: pointer;
@@ -120,9 +122,6 @@
     transition: all 1s ease;
 }
 
-.live-pokeball.poke-hidden {
-    animation: shrink 3s forwards;
-  }
   
   @keyframes shrink {
     0% {
@@ -138,9 +137,48 @@
 }
 
 .poke-screen {
-    width: 80%;
+    width: 100%;
+    grid-column: 1/13;
+    grid-row: 1/5;
+    align-self: center;
     opacity: 0;
     visibility: hidden;
+    z-index: 0;
+}
+
+.pokemon-random {
+    grid-column: 1/13;
+    grid-row: 1/5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    width: 100%;
+    perspective: 1000px;
+}
+
+.pokemon-random img {
+    width: 50%;
+    object-fit: cover;
+    /* ponme su perspectiva hacia delante*/
+    transform: perspective(1000px) translateZ(120px) translateY(150px) translateX(0px);
+}
+
+@keyframes rotate {
+    0% {
+      transform: rotateY(0deg);
+    }
+    100% {
+      transform: rotateY(360deg);
+    }
+  }
+
+.random-visible {
+    opacity: 1;
+    visibility: visible;
+    animation: grow 3s forwards;
 }
 
 .poke-visible {
@@ -166,37 +204,82 @@
 .poke-hidden {
     opacity: 0;
     visibility: hidden;
+    animation: shrink 3s forwards;
+}
+
+.form__container {
+    grid-column: 5/9;
+    grid-row: 2/4;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .home__form {
-    position: absolute;
-    top: 18em;
-    right: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: .3em;
-    opacity: 0;
-    visibility: hidden;
+    z-index: 1;
 }
 
 .home__input {
-    border: none;
-    background-color: transparent;
+    width: auto;
+    border: inset;
     text-align: center;
-}
-
-.home__btn {
-    border: outset;
-    padding: .5em 1em;
     color: white;
     font-weight: bold;
     background-color: transparent;
-    cursor: pointer;
-    transform: scale(1);
-    transition: .5s ease all
 }
+
+/*INICIO MEDIAS QUERYS PARA REDUCIR EL TAMAÑO DEL INPUT */
+@media screen and (max-width: 1180px) {
+    .home__input {
+        font-size: .7em;
+    }
+}
+@media screen and (max-width: 1080px) {
+    .home__input {
+        font-size: .6em;
+    }
+}
+@media screen and (max-width: 950px) {
+    .home__input {
+        font-size: .55em;
+    }
+}
+/*FIN MEDIAS QUERYS PARA REDUCIR EL TAMAÑO DEL INPUT */
+
+
+
+.home__btn {
+    background-color: black;
+    color: white;
+    font-size: 1em;
+    padding: .5em 1em;
+    border: outset;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #F11712, 0 0 35px #F11712, 0 0 40px #F11712, 0 0 50px #F11712;
+    box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5);
+    animation: neon .5s ease-in-out infinite alternate;
+    transition: all .5s ease;
+}
+
+@keyframes neon {
+    from {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #F11712, 0 0 35px #F11712, 0 0 40px #F11712, 0 0 50px #F11712;
+      box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5);
+    }
+    to {
+      text-shadow: 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #fff, 0 0 30px #F11712, 0 0 50px #F11712, 0 0 60px #F11712, 0 0 80px #F11712;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
+    }
+  }
+
+
 
 .home__btn:hover {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #fff, 0 0 35px #ffdd00, 0 0 40px #ffdd00, 0 0 50px #ffdd00, 0 0 75px #ffdd00;
@@ -207,10 +290,11 @@
 
 .home__input::placeholder {
     color: white;
-    font-size: 1em;
+    font-size: 1.3em;
     text-align: center;
     border-bottom: 3px solid white;
 }
+
 
 .form-visible {
     opacity: 1;
@@ -237,6 +321,22 @@
     
 }
 
+.live4 {
+    grid-column: 8/12;
+    grid-row: 1/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.pokedex-visible {
+    opacity: 1;
+    visibility: visible;
+    animation: grow 3s forwards;
+}
+
 .battle-title {
     text-align: center;
     margin-top: .5em;
@@ -260,3 +360,86 @@
   }
   
   
+
+@media screen and (max-width: 1020px) {
+    .live__container {
+        width: auto;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-gap: 1rem;
+        position: relative;
+    }
+
+    .live1{
+        grid-column: 1/6;
+        grid-row: 2/3;
+        width: 100%;
+        height: auto;
+        /* min-height: 250px; */
+        background-color: white;
+        border: 4px solid #ffdd00;
+        border-radius: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .live2{
+        grid-column: 8/13;
+        grid-row: 2/3;
+        width: 100%;
+        height: auto;
+        background-color: white;
+        border: 4px solid #ffdd00;
+        border-radius: 30px;
+    }
+    .live3 {
+        grid-column: 3/11;
+        grid-row: 4/6;
+        align-self: center;
+        width: 100%;
+        height: 350px;
+        background-color: white;
+        border: 4px solid #ffdd00;
+        border-radius: 30px;
+    }
+
+
+    .container-watchTV{
+        width: 10%;
+        height: 12em;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .watchTV {
+        width: 95%;
+        position: relative;
+    }
+    
+    .watchTV-title{
+        position: relative;
+        top: -12px;
+        color: #ffdd00;
+        font-weight: bold;
+        text-align: center;
+    }
+    .imgsPoke {
+        grid-column: 5/9;
+        grid-row: 2/4;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        position: relative;
+        top: 6.5em;
+        left: 2.8em;
+        width: 70%;
+    }
+    
+}
