--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -11,435 +11,107 @@
     padding: 0;
 }
 
-.container-watchTV{
-    width: 10%;
-    height: 12em;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.watchTV {
-    width: 95%;
-    position: relative;
-}
-
-.watchTV-title{
-    position: relative;
-    top: -12px;
-    color: #ffdd00;
-    font-weight: bold;
-    text-align: center;
-}
 
 .live__container {
+    width: 100vw;
+    height: 100vh;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(20, 1fr);
     grid-gap: 1rem;
     position: relative;
-    top: -2em;
-}
-
-.live1{
-    grid-column: 3/6;
-    grid-row: 1/2;
-    width: 100%;
-    height: auto;
-    /* min-height: 250px; */
-    background-color: white;
-    border: 4px solid #ffdd00;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.live1-img{
-    width: 30%;
-    height: auto;
-    object-fit: cover;
-    align-self: center;
-}
-
-.text-container {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: relative;
-    right: 1em;
-}
-
-.text-live{
-    color: red;
-}
-
-.circle{
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: red;
-    margin: 0 10px;
-}
-
-.live2{
-    grid-column: 3/6;
-    grid-row: 2/3;
-    width: 100%;
-    height: auto;
-    background-color: white;
-    border: 4px solid #ffdd00;
-    border-radius: 30px;
-}
-
-.live2-img{
-    width: 100%;
-    height: 100%;
-    align-self: center;
-    object-fit: cover;
-    border-radius: 30px;
-}
-
-.imgsPoke {
-    grid-column: 6/8;
-    grid-row: 1/3;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    position: relative;
-}
-
-.live-pokeball {
-    grid-column: 1/13;
-    grid-row: 1/5;
-    position: absolute;
-    align-self: center;
-    cursor: pointer;
-    transform: scale(1);
-    transition: all 1s ease;
-}
-
-  
-  @keyframes shrink {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-
-.live-pokeball:hover {
-    transform: scale(1.1);
-}
-
-.poke-screen {
-    width: 100%;
-    grid-column: 1/13;
-    grid-row: 1/5;
-    align-self: center;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 0;
-}
-
-.pokemon-random {
-    grid-column: 1/13;
-    grid-row: 1/5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-    opacity: 0;
-    visibility: hidden;
-    width: 100%;
-    perspective: 1000px;
-}
-
-.pokemon-random img {
-    width: 50%;
-    object-fit: cover;
-    /* ponme su perspectiva hacia delante*/
-    transform: perspective(1000px) translateZ(120px) translateY(150px) translateX(0px);
-}
-
-@keyframes rotate {
-    0% {
-      transform: rotateY(0deg);
-    }
-    100% {
-      transform: rotateY(360deg);
-    }
-  }
-
-.random-visible {
-    opacity: 1;
-    visibility: visible;
-    animation: grow 3s forwards;
-}
-
-.poke-visible {
-    opacity: 1;
-    visibility: visible;
-}
-
-.poke-screen.poke-visible {
-    animation: grow 3s forwards;
-  }
-  
-  @keyframes grow {
-    0% {
-      transform: scale(0);
-      opacity: 0;
-    }
-    100% {
-      transform: scale(1);
-      opacity: 1;
-    }
-  }
-
-.poke-hidden {
-    opacity: 0;
-    visibility: hidden;
-    animation: shrink 3s forwards;
-}
-
-.form__container {
-    grid-column: 5/9;
-    grid-row: 2/4;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    visibility: hidden;
-}
-
-.home__form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: .3em;
-    z-index: 1;
-}
-
-.home__input {
-    width: auto;
-    border: inset;
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    background-color: transparent;
-}
-
-/*INICIO MEDIAS QUERYS PARA REDUCIR EL TAMAÑO DEL INPUT */
-@media screen and (max-width: 1180px) {
-    .home__input {
-        font-size: .7em;
-    }
-}
-@media screen and (max-width: 1080px) {
-    .home__input {
-        font-size: .6em;
-    }
-}
-@media screen and (max-width: 950px) {
-    .home__input {
-        font-size: .55em;
-    }
-}
-/*FIN MEDIAS QUERYS PARA REDUCIR EL TAMAÑO DEL INPUT */
-
-
-
-.home__btn {
-    background-color: black;
-    color: white;
-    font-size: 1em;
-    padding: .5em 1em;
-    border: outset;
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #F11712, 0 0 35px #F11712, 0 0 40px #F11712, 0 0 50px #F11712;
-    box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5);
-    animation: neon .5s ease-in-out infinite alternate;
-    transition: all .5s ease;
-}
-
-@keyframes neon {
-    from {
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #F11712, 0 0 35px #F11712, 0 0 40px #F11712, 0 0 50px #F11712;
-      box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5);
-    }
-    to {
-      text-shadow: 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #fff, 0 0 30px #F11712, 0 0 50px #F11712, 0 0 60px #F11712, 0 0 80px #F11712;
-      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
-    }
-  }
-
-
-
-.home__btn:hover {
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #fff, 0 0 35px #ffdd00, 0 0 40px #ffdd00, 0 0 50px #ffdd00, 0 0 75px #ffdd00;
-    transform: scale(1.1);
-    font-size: 1.1em;
-    animation: electric 1s infinite;
-}
-
-.home__input::placeholder {
-    color: white;
-    font-size: 1.3em;
-    text-align: center;
-    border-bottom: 3px solid white;
-}
-
-
-.form-visible {
-    opacity: 1;
-    visibility: visible;
-    animation: grow 3s forwards;
-}
-
-.live3 {
-    grid-column: 8/12;
-    grid-row: 1/3;
-    align-self: center;
-    width: 100%;
-    height: 350px;
-    background-color: white;
-    border: 4px solid #ffdd00;
-    border-radius: 30px;
-}
-
-.video-live {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 30px;
     
 }
 
-.live4 {
-    grid-column: 8/12;
-    grid-row: 1/3;
+.poke-title {
+    grid-column: 7/15;
+    grid-row: 1/4;
+    width: 100%;
+}
+
+.pokeball__container {
+    grid-column: 9/13;
+    grid-row: 10/12;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: .5rem;
+    position: relative;
+}
+
+.pokeball-hidden {
     opacity: 0;
     visibility: hidden;
 }
 
-.pokedex-visible {
-    opacity: 1;
-    visibility: visible;
-    animation: grow 3s forwards;
-}
 
-.battle-title {
-    text-align: center;
-    margin-top: .5em;
-    font-size: 2.2em;
-    color: white;
-    font-weight: bold;
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #fff, 0 0 35px #ffdd00, 0 0 40px #ffdd00, 0 0 50px #ffdd00, 0 0 75px #ffdd00;
-    animation: electric 1s infinite;
-}
 
-@keyframes electric {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0.5;
-    }
-    100% {
-      opacity: 1;
-    }
+.pokeball {
+    position: relative;
+    animation: 2s movercaja infinite;
   }
-  
-  
 
-@media screen and (max-width: 1020px) {
-    .live__container {
-        width: auto;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-        grid-gap: 1rem;
-        position: relative;
+    @keyframes movercaja {
+        50%{
+            transform: translateY(-.5rem);
+        }
     }
 
-    .live1{
-        grid-column: 1/6;
-        grid-row: 2/3;
-        width: 100%;
-        height: auto;
-        /* min-height: 250px; */
-        background-color: white;
-        border: 4px solid #ffdd00;
-        border-radius: 30px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .live2{
-        grid-column: 8/13;
-        grid-row: 2/3;
-        width: 100%;
-        height: auto;
-        background-color: white;
-        border: 4px solid #ffdd00;
-        border-radius: 30px;
-    }
-    .live3 {
-        grid-column: 3/11;
-        grid-row: 4/6;
-        align-self: center;
-        width: 100%;
-        height: 350px;
-        background-color: white;
-        border: 4px solid #ffdd00;
-        border-radius: 30px;
-    }
-
-
-    .container-watchTV{
-        width: 10%;
-        height: 12em;
+    .pokeball__container:before {
         position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        content: '';
+        top: 200%;
+        left: 12%;
+        height: 10px;
+        width: 75%;
+        opacity: 0;
+        background: -webkit-radial-gradient(center, ellipse, rgba(255, 255, 255, 0.336) 0%,
+        rgba(0, 0, 0, 0.432) 80%);
+        transition-duration: 1s;
+        border-radius: 50%;
+        opacity: 0.4;
+        transform: translateY(6px);
+        animation: 2s moversombra infinite;
+       
     }
     
-    .watchTV {
-        width: 95%;
-        position: relative;
+    @keyframes moversombra{
+        50%{
+            opacity: 1;
+            transform: translateY(.5rem);
+        }
     }
     
-    .watchTV-title{
-        position: relative;
-        top: -12px;
-        color: #ffdd00;
-        font-weight: bold;
-        text-align: center;
-    }
-    .imgsPoke {
-        grid-column: 5/9;
-        grid-row: 2/4;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        position: relative;
-        top: 6.5em;
-        left: 2.8em;
-        width: 70%;
-    }
-    
-}
+  .pokeball-text {
+    position: relative;
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    text-shadow: 0 0 0.5rem #000;
+    text-align: center;
+  }
+
+  .pokeball-open__container {
+    grid-column: 9/13;
+    grid-row: 10/12;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: .5rem;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+  }
+
+  .pokeball-open{
+    width: 80%;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+
+
