--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -43,7 +43,19 @@
 .pokeball-hidden {
     opacity: 0;
     visibility: hidden;
+    animation: grow 1s forwards;
 }
+
+@keyframes grow {
+    0% {
+      transform: scale(0);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
 
 
 
