--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -38,17 +38,22 @@
     flex-direction: column;
     gap: .5rem;
     position: relative;
+    transition: 1s ease all;
 }
 
   .pokeball {
       position: relative;
+      transition: all 1s ease;
       animation: 2s movercaja infinite;
     }
   
   .pokeball-hidden {
+    animation: shrink 2s forwards;
+  }
+
+  .pokeball__container-hidden {
     opacity: 0;
     visibility: hidden;
-    animation: shrink 5s forwards;
   }
 
   @keyframes grow {
@@ -63,10 +68,10 @@
   }
     @keyframes shrink {
       0% {
-        transform: scale(1);
+        transform: scale(1) ;
       }
       100% {
-        transform: scale(0);
+        transform: scale(0) rotate(360deg);
       }
     }
 
@@ -130,6 +135,12 @@
     width: 80%;
     opacity: 0;
     visibility: hidden;
+  }
+
+  .pokeball-open-visible {
+    animation: grow 2s forwards;
+    opacity: 1;
+    visibility: visible;
   }
 
 
