--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -29,7 +29,7 @@
   --big-font-size: 2.5rem;
   --medium-font-size: 1.5rem;
   --small-font-size: 1rem;
-  --smaller-fonm-size: 0.8rem;
+  --smaller-font-size: 0.8rem;
 
   /* Grosores */
   --font-weight-light: 300;
@@ -45,5 +45,83 @@
   --mr-5: 2.5rem;
 
   /* Background */
-  --background: #f5f5f5;
+  --background: linear-gradient(to left, #F11712, #0099F7);
+}
+
+/*====================== BASE ====================*/
+
+
+body {
+  font-family: var(--body-font);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-weight-normal);
+  color: #333;
+  background: var(--background)
+}
+
+/* SCREEN */
+
+@media screen and ((min-width: 220px) and (max-width: 600px )) {
+  body {
+    font-size: var(--small-font-size);
+    width: 100vw;
+    height: 100vh;
+  }
+  .home__container {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .poke-title {
+    margin-top: var(--mr-2);
+    grid-column: 1 / 13;
+    grid-row: 1 / 3;
+    justify-self: center;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .pokeball__container {
+    /* background-color: green; */
+    grid-column: 3 / 11;
+    grid-row: 6/9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .pokeball-text {
+    text-align: center;
+    color: #fff;
+    font-size: var(--medium-font-size);
+    font-weight: var(--font-weight-bold);
+  }
+
+  .pokeball {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .pokeball-open__container {
+    /* background-color: green; */
+    margin-top: var(--mr-3);
+    grid-column: 3 / 11;
+    grid-row: 6/9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .pokeball-open {
+    width: 75%;
+  }
+
+
 }
