--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -103,9 +103,70 @@ body {
   }
 
   .pokeball {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    position: relative;
+      transition: all 1s ease;
+      animation: 2s movercaja infinite;
+  }
+
+  
+  .pokeball-hidden {
+    animation: shrink 2s forwards;
+  }
+
+  .pokeball__container-hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  @keyframes grow {
+    0% {
+      transform: scale(0);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+    @keyframes shrink {
+      0% {
+        transform: scale(1) ;
+      }
+      100% {
+        transform: scale(0) rotate(360deg);
+      }
+    }
+
+
+    @keyframes movercaja {
+        50%{
+            transform: translateY(-.5rem);
+        }
+    }
+
+    .pokeball__container:before {
+      position: absolute;
+      content: '';
+      top: 70%;
+      left: 12%;
+      height: 10px;
+      width: 75%;
+      opacity: 0;
+      background: -webkit-radial-gradient(center, ellipse, rgba(255, 255, 255, 0.336) 0%,
+      rgba(0, 0, 0, 0.432) 80%);
+      transition-duration: 1s;
+      border-radius: 50%;
+      opacity: 0.4;
+      transform: translateY(6px);
+      animation: 2s moversombra infinite;
+     
+  }
+  
+  @keyframes moversombra{
+      50%{
+          opacity: 1;
+          transform: translateY(.5rem);
+      }
   }
 
   .pokeball-open__container {
@@ -117,6 +178,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    visibility: hidden;
   }
 
   .pokeball-open {
