--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -61,7 +61,7 @@ body {
 
 /* SCREEN */
 
-@media screen and ((min-width: 220px) and (max-width: 600px )) {
+/* @media  ((max-width: 700px )) { */
   body {
     font-size: var(--small-font-size);
     width: 100vw;
@@ -185,5 +185,147 @@ body {
     width: 75%;
   }
 
+  .pokeball-open-visible {
+    animation: grow 2s forwards;
+    opacity: 1;
+    visibility: visible;
+  }
 
+  .pokemon-random {
+    position: absolute;
+    grid-column: 3/11;
+    grid-row: 6/9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    width: 100%;
+    perspective: 1000px;
+  }
+
+  
+.pokeQuiz__container {
+  width: 300px;
+  height: 250px;
+  background: none;
+  border-radius: 1rem;
+  box-shadow: 5px 2px 3px rgba(0, 0, 0, 0.432);
+  transform: perspective(0px) translateZ(0px) translateY(-170px) translateX(0px);
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  position: relative;
 }
+
+
+.pokemon-random .pokemon-logo {
+  grid-column: 2/6;
+  width: 100%;
+  object-fit: cover;
+  align-self: center;
+  /* ponme su perspectiva hacia delante*/
+  z-index: 0;
+  transition: 1s ease filter;
+}
+
+.pokemon-random .pokemon-img {
+  grid-column: 3/5;
+  grid-row: 2/5;
+  position: relative;
+  top: var(--mr-1);
+  width: 100%;
+  object-fit: cover;
+  /* ponme su perspectiva hacia delante*/
+  z-index: 0;
+  filter: brightness(0%);
+  transition: 1s ease filter;
+}
+
+
+.random-visible {
+  opacity: 1;
+  visibility: visible;
+  animation: grow 2s forwards;
+}
+
+
+  .pokemon-random-visible {
+    animation: grow 2s forwards;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  
+  .pokemon-interrogacion {
+    grid-column: 4/6;
+    grid-row: 2/4;
+    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.pokemon-interrogacion--img {
+  position: relative;
+  left: 1em;
+  width: 50%;
+}
+
+.pokeQuiz-input__container {
+  position: absolute;
+  grid-column: 1/7;
+  grid-row: 5/7;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.pokeQuiz-input {
+  text-align: center;
+  position: relative;
+  top: -10px;
+  width: 180px;
+  height: 30px;
+}
+
+.pokeQuiz-input::placeholder { 
+  color: black;
+  font-size: .7rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.pokeQuiz-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.pokeQuiz-button:nth-child(1) {
+  background-color: #de2124;
+  color: white;
+  padding: 0.2rem .4rem;
+  border-radius: 0.2rem;
+  font-weight: bold;
+}
+
+.pokeQuiz-button:nth-child(2) {
+  background-color: #1e90ff;
+  color: white;
+  padding: 0.2rem .4rem;
+  border-radius: 0.2rem;
+  font-weight: bold;
+}
+
+
+
+/* } */
