--- a/src/components/Pokedex/styles/home.css
+++ b/src/components/Pokedex/styles/home.css
@@ -64,31 +64,29 @@ body {
 /* @media  ((max-width: 700px )) { */
   body {
     font-size: var(--small-font-size);
-    width: 100vw;
-    height: 100vh;
   }
   .home__container {
     position: relative;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
     height: 100vh;
   }
 
   .poke-title {
-    margin-top: var(--mr-2);
-    grid-column: 1 / 13;
-    grid-row: 1 / 3;
-    justify-self: center;
+    position: relative;
+    margin-top: -10rem;
+    margin-bottom: 5rem;
     width: 100%;
     object-fit: cover;
   }
 
   .pokeball__container {
-    /* background-color: green; */
-    grid-column: 3 / 11;
-    grid-row: 6/9;
+    width: 75%;
+    max-width: 350px;
+    margin: 2rem 2rem 0rem 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,6 +114,7 @@ body {
   .pokeball__container-hidden {
     opacity: 0;
     visibility: hidden;
+    display: none;
   }
 
   @keyframes grow {
@@ -144,41 +143,16 @@ body {
         }
     }
 
-    .pokeball__container:before {
-      position: absolute;
-      content: '';
-      top: 70%;
-      left: 12%;
-      height: 10px;
-      width: 75%;
-      opacity: 0;
-      background: -webkit-radial-gradient(center, ellipse, rgba(255, 255, 255, 0.336) 0%,
-      rgba(0, 0, 0, 0.432) 80%);
-      transition-duration: 1s;
-      border-radius: 50%;
-      opacity: 0.4;
-      transform: translateY(6px);
-      animation: 2s moversombra infinite;
-     
-  }
-  
-  @keyframes moversombra{
-      50%{
-          opacity: 1;
-          transform: translateY(.5rem);
-      }
-  }
 
   .pokeball-open__container {
-    /* background-color: green; */
-    margin-top: var(--mr-3);
-    grid-column: 3 / 11;
-    grid-row: 6/9;
+    background-color: blue;
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     visibility: hidden;
+    display: none;
   }
 
   .pokeball-open {
@@ -191,10 +165,15 @@ body {
     visibility: visible;
   }
 
+
+  .pokeballContainer-visible {
+    display: flex;
+  }
+
+
+
   .pokemon-random {
     position: absolute;
-    grid-column: 3/11;
-    grid-row: 6/9;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -207,6 +186,7 @@ body {
 
   
 .pokeQuiz__container {
+  background-color: yellow;
   width: 350px;
   height: 380px;
   background: none;
@@ -214,8 +194,8 @@ body {
   box-shadow: 5px 2px 3px rgba(0, 0, 0, 0.432);
   transform: perspective(0px) translateZ(0px) translateX(0px);
   display: grid;
-  grid-template-columns: repeat(6,58.3px);
-  grid-template-rows: repeat(6, 58.3px);
+  grid-template-columns: repeat(6, minmax(20.5px, 58.3px));
+  grid-template-rows: repeat(6, minmax(20.5px, 58.3px));
   position: relative;
 }
 
@@ -385,8 +365,6 @@ body {
 }
 
 .pokedex__container {
-  grid-column: 1/13;
-  grid-row: 7/10;
   justify-self: center;
   display: grid;
   grid-template-columns: repeat(12, 25px);
@@ -431,7 +409,7 @@ body {
   margin-bottom: .2rem;
   font-size: var(--small-font-size);
   font-weight: var(--font-weight-bold);
-  border: 2px dashed rgba(255, 255, 255, 0.568);
+  border: 4px outset rgba(255, 255, 255, 0.568);
   padding: .2em;
   cursor: pointer;
   pointer-events: auto;
@@ -464,5 +442,25 @@ body {
 
 }
 
+@media (min-width: 420px) {
+  .poke-title {
+    position: relative;
+    margin-top: -5rem;
+    width: 70%;
+    object-fit: cover;
+  }
+
+}
+
+@media (min-width: 768px) {
+  
+  .poke-title {
+    position: relative;
+    margin-top: -5rem;
+    width: 70%;
+    object-fit: cover;
+  }
+
+}
 
 /* } */
